# Peerlearn-APP

./: .env.example  .replit  DOCUMENTATION.txt  Dockerfile  INSTALLATION_GUIDE.md  PEERLEARN_PROJECT_DOCUMENTATION.md  PROJECT_STRUCTURE.txt  README.md  REQUIREMENTS_DOC.txt  db.sqlite3  docker-compose.yml  fix_consumer.py  pip_requirements.txt  pyproject.toml  render.yaml  requirements.txt  room_js_changes.patch
# Good .dockerignore file __pycache__/: .dockerignore
attached_assets/: Pasted-1-Authentication-Role-Routing-1-Open-the-App-any-public-page-if-you-click-a-protected-CTA--1747239763567.txt  Pasted-AttributeError-at-users-dashboard-learner-SessionRequest-object-has-no-attribute-user-Reques-1747138861812.txt  Pasted-AttributeError-at-users-dashboard-learner-SessionRequest-object-has-no-attribute-user-Reques-1747156395278.txt  Pasted-AttributeError-at-users-dashboard-learner-property-rating-count-of-CustomUser-object-has-no-s-1747303517387.txt  Pasted-AttributeError-at-users-dashboard-learner-property-rating-count-of-CustomUser-object-has-no-s-1747304717189.txt  Pasted-AttributeError-at-users-mentors-list-object-has-no-attribute-split-Request-Method-GET-Requ-1747133798321.txt  Pasted-FieldError-at-users-dashboard-learner-Cannot-resolve-keyword-booking-into-field-Choices-are-b-1747129104626.txt  Pasted-FieldError-at-users-dashboard-learner-Cannot-resolve-keyword-recipient-into-field-Choices-are--1747131824670.txt  Pasted-Mentor-Dashboard-dashboard-mentor-Access-role-mentor-only-middleware-redirect-others-Main-Ta-1747124986876.txt  (+48 more)
peerlearn/: __init__.py  asgi.py  (+5 more)
(+120 files in other folders)
