[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.2",
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "daphne>=4.1.2",
    "django-redis>=5.4.0",
    "django>=5.2.1",
    "django-crispy-forms>=2.4",
    "djangorestframework>=3.16.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "razorpay>=1.4.2",
    "redis>=6.0.0",
]
